stop horizontal scroll

--- a/atoms/default/client/css/_base.scss
+++ b/atoms/default/client/css/_base.scss
@@ -12,6 +12,7 @@ body {
 .pledge-main,
 .pledge-header,
 .support-and-share,
+.sticky-header,
 .read-more {
   &__inner {
     padding: 0 10px;
