--- a/atoms/default/client/css/_read-more.scss
+++ b/atoms/default/client/css/_read-more.scss
@@ -29,6 +29,7 @@
   }
 
   &__links {
+    overflow: hidden;
     display: flex;
     flex-flow: row wrap;
     @include mq(tablet) {
